Fix map toggle button not appearing on mobile view

--- a/src/Trip/Trip.css
+++ b/src/Trip/Trip.css
@@ -67,7 +67,7 @@
     padding-right: 0;
   }
 
-  .Trip header .mdi-google-maps {
+  .Trip header .mdi-map {
     display: block;
   }
 }
